--- a/partials/landing.html
+++ b/partials/landing.html
@@ -2,6 +2,10 @@
   <div class="row">
     <div class="col-sm-12">
       Mackenzie Simulator
+      <ui-gmap-google-map center='map.center' zoom='map.zoom'>
+      	<ui-gmap-markers idKey="markers.id" models="markers" coords="'coords'" click="'onClick'" events="markers.events">
+      	</ui-gmap-markers>
+	  </ui-gmap-google-map>
     </div>
   </div>   
 </div>
