--- a/partials/simulate.html
+++ b/partials/simulate.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
       Mackenzie Simulator
       <ui-gmap-google-map center='map.center' zoom='map.zoom'>
-      	<ui-gmap-markers idKey="markers.id" models="markers" coords="'coords'" options="options" click="'onClick'" events="markers.events">
+      	<ui-gmap-markers idKey="markers.id" models="markers" coords="'coords'" options="options" icon="markerIcon" click="'onClick'" events="markers.events">
       	</ui-gmap-markers>
       	<ui-gmap-polyline path='polylines'></ui-gmap-polyline>
 	  </ui-gmap-google-map>
