--- a/ui/partials/about-us.html
+++ b/ui/partials/about-us.html
@@ -92,7 +92,7 @@
 		<!-- our-team -->
 		<div class="team">
 			<div class="center wow fadeInDown">
-				<h2>Team of Doodly</h2>
+				<h2>Team</h2>
 				<p class="lead"></p>
 			</div>
 
@@ -224,7 +224,7 @@
 </section><!--/about-us-->
 
 <section id="bottom">
-    <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+    <!-- <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
         <div class="row">
             <div class="col-md-3 col-sm-6">
                 <div class="widget">
@@ -233,7 +233,7 @@
 
                     </ul>
                 </div>    
-            </div><!--/.col-md-3-->
+            </div>
 
             <div class="col-md-3 col-sm-6">
                 <div class="widget">
@@ -242,7 +242,7 @@
  
                     </ul>
                 </div>    
-            </div><!--/.col-md-3-->
+            </div>
 
             <div class="col-md-3 col-sm-6">
                 <div class="widget">
@@ -251,7 +251,7 @@
 
                     </ul>
                 </div>    
-            </div><!--/.col-md-3-->
+            </div>
 
             <div class="col-md-3 col-sm-6">
                 <div class="widget">
@@ -260,7 +260,7 @@
 
                     </ul>
                 </div>    
-            </div><!--/.col-md-3-->
+            </div>
         </div>
-    </div>
+    </div> -->
 </section><!--/#bottom-->
