--- a/ui/partials/homepage.html
+++ b/ui/partials/homepage.html
@@ -2,13 +2,14 @@
 
     <section id="main-slider" class="no-margin">
         <div class="carousel slide">
-            <div class="item active" style="background-image: url(images/bg1.jpg)">
+           <!-- <div class="item active" style="background-image: url(images/bg1.jpg)"> -->
+          <div class="item active" >
                 <div class="container">
                     <div class="row slide-margin">
                         <div class="col-sm-6">
                             <div class="carousel-content">
-                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
+                                <h1 class="animation animated-item-1">Enables Anybody to deliver Anything, Anywhere, Anytime</h1>
+                                <h2 class="animation animated-item-2">A true hyper-local delivery platform...</h2>
                                 <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                             </div>
                         </div>
