--- a/ui/partials/landing.html
+++ b/ui/partials/landing.html
@@ -1,14 +1,14 @@
 <div>   
-  <div class="row">
-    <div class="col-sm-12">
-      Mackenzie Simulator
+  <!-- <div class="row">
+    <div class="col-sm-12"> -->
+      Doodly Simulator
       <ui-gmap-google-map center='map.center' zoom='map.zoom'>
       	<ui-gmap-markers idKey="markers.id" models="markers" coords="'coords'" options="options" click="'onClick'" events="markers.events">
       	</ui-gmap-markers>
       	<ui-gmap-polyline path='polylines'></ui-gmap-polyline>
 	  </ui-gmap-google-map>
-    </div>
-  </div>   
+    <!-- </div>
+  </div> -->  
 </div>
 
 
