--- a/ui/partials/services.html
+++ b/ui/partials/services.html
@@ -59,15 +59,15 @@
             </div><!--/.row--> 
 
 
-            <div class="get-started center wow fadeInDown">
+            <!-- <div class="get-started center wow fadeInDown">
                 <h2>Ready to get started</h2>
                 <p class="lead"></p>
                 <div class="request">
                     <h4><a href="#">Request a free Quote</a></h4>
                 </div>
-            </div><!--/.get-started-->
+            </div> --><!--/.get-started-->
 
-            <div class="clients-area center wow fadeInDown">
+            <!-- <div class="clients-area center wow fadeInDown">
                 <h2>What our client says</h2>
                 <p class="lead"></p>
             </div>
@@ -94,13 +94,13 @@
                         <h4><span></span></h4>
                     </div>
                 </div>
-           </div>
+           </div> -->
 
         </div><!--/.container-->
     </section><!--/#feature-->
 
 
-    <section id="bottom">
+   <!-- <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -110,34 +110,34 @@
 
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div> --><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
+               <!-- <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h3>Support</h3>
                         <ul>
 
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div> --><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
+                <!-- <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h3>Developers</h3>
                         <ul>
 
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div>--><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
+                <!-- <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h3>Our Partners</h3>
                         <ul>
 
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
-            </div>
-        </div>
+                </div>--><!--/.col-md-3-->
+           <!-- </div>
+        </div> -->
     </section><!--/#bottom-->
