Property change as per backend

--- a/ui/partials/registration.html
+++ b/ui/partials/registration.html
@@ -18,9 +18,9 @@
                         <span class="doodly-input-line"></span>                        
                     </div>
                     <div class="col-sm-12 form-group" id="destDiv">
-                        <!--<div><input autocomplete="off" aria-haspopup="false" role="combobox" aria-autocomplete="both" class="doodly-input" placeholder="Choose destination" ng-model="userSelection.dest"></div>
-                        <span class="doodly-input-line"></span>-->
-                        <ui-gmap-search-box template="searchbox.template" events="searchbox.events" parentdiv="searchbox.parentdiv" position="BOTTOM_RIGHT"></ui-gmap-search-box>
+                        <div><input autocomplete="off" id="searchTextField" aria-haspopup="false" role="combobox" aria-autocomplete="both" class="doodly-input" placeholder="Choose destination" ng-model="userSelection.dest"></div>
+                        <span class="doodly-input-line"></span>
+                       <!-- <ui-gmap-search-box template="searchbox.template" events="searchbox.events" parentdiv="searchbox.parentdiv"></ui-gmap-search-box>-->
                     </div>         
                     <div class="form-group col-sm-12">                    
                         <div class="input-group col-sm-12">
