--- a/ui/partials/registration.html
+++ b/ui/partials/registration.html
@@ -18,7 +18,7 @@
                         <span class="doodly-input-line"></span>                        
                     </div>
                     <div class="col-sm-12 form-group" id="destDiv">
-                        <div><input autocomplete="off" id="searchTextField" aria-haspopup="false" role="combobox" aria-autocomplete="both" class="doodly-input" placeholder="Choose destination" ng-model="userSelection.dest"></div>
+                        <div><input id="searchTextField" aria-haspopup="false" role="combobox" aria-autocomplete="both" class="doodly-input" placeholder="Choose destination" ng-model="userSelection.dest"></div>
                         <span class="doodly-input-line"></span>
                        <!-- <ui-gmap-search-box template="searchbox.template" events="searchbox.events" parentdiv="searchbox.parentdiv"></ui-gmap-search-box>-->
                     </div>         
