--- a/ui/css/app.css
+++ b/ui/css/app.css
@@ -33,6 +33,11 @@
 	width : 100%;
  }
 
+ .object-selection-container .angular-google-map-container{
+    height : 0px;
+    width : 100%;  
+ }
+
  .doodly-radio{
     color: #9d9da3;    
     font-weight: 500
