--- a/ui/partials/signup.html
+++ b/ui/partials/signup.html
@@ -18,7 +18,7 @@
                         <label>Doodly Type</label><span class="mandatory-symbol"> * </span><br/>
                         <input id="movingRadio" name="type" type="radio" ng-model="doodlyType" value="moving" required/>
                         <label class="normal-font" for="movingRadio">Moving Doodly</label>
-                        <br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;
                         <input id="jointRadio" name="type" type="radio" ng-model="doodlyType" value="joint" />
                         <label class="normal-font" for="joinRadio">Joint Doodly</label>
                       </div>
@@ -39,7 +39,7 @@
                         <label>Gender</label><span class="mandatory-symbol"> * </span></br>
                         <input id="maleRadio" name="gender" type="radio" ng-model="doodlygender" value="m" required/>
                         <label class="normal-font" for="maleRadio">Male</label>
-                        <br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;
                         <input id="femaleRadio" name="gender" type="radio" ng-model="doodlygender" value="f" />
                         <label class="normal-font" for="femaleRadio">Female</label>
                       </div>
@@ -47,7 +47,7 @@
                         <label>Marital Status</label><span class="mandatory-symbol"> * </span></br>
                         <input id="marriedRadio" type="radio" ng-model="doodlyMarStatus" name="status" value="m" required/>
                         <label class="normal-font" for="marriedRadio">Married</label>
-                        <br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;
                         <input id="singleRadio" name="status" type="radio" ng-model="doodlyMarStatus" value="s" />
                         <label class="normal-font" for="singleRadio">Single</label>
                       </div>
