--- a/ui/partials/login.html
+++ b/ui/partials/login.html
@@ -20,31 +20,16 @@
 	                        </div>
 	                        <div class="form-group">
 	                        	<label for="userPwd">Password</label><span class="mandatory-symbol"> * </span>
-	                        	<input type="password" name="userPwd" placeholder="Password..." class="form-password form-control" id="userPwd" required ng-model="userPwd">
+	                        	<input type="password" name="userPwd" class="form-password form-control" id="userPwd" required ng-model="userPwd">
                                 <!-- <span ng-show="form.userPwd.$dirty && form.userPwd.$error.required" class="help-block">Password is required</span> -->
 	                        </div>
 	                        <button type="submit" class="btn">Sign in!</button>
 	                    </form>
-                        <p class="signup-link"> Not a Doodly? <a class="interactive" ng-click="signUp()">Sign up now</a> <span class="glyphicon glyphicon-arrow-right"></span></p>
+                        <p class="signup-link"> Not yet registered? <a class="interactive" ng-click="signUpUser()">User Sign up</a>&nbsp;/&nbsp;
+                        <a class="interactive" ng-click="signUpDoodly()">Doodly Sign up</a></p>
                     </div>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-sm-6 col-sm-offset-3 social-login">
-                	<h3>...or login with:</h3>
-                	<div class="social-login-buttons">
-                    	<a class="btn btn-link-1 btn-link-1-facebook" href="#">
-                    		<i class="fa fa-facebook"></i> Facebook
-                    	</a>
-                    	<a class="btn btn-link-1 btn-link-1-twitter" href="#">
-                    		<i class="fa fa-twitter"></i> Twitter
-                    	</a>
-                    	<a class="btn btn-link-1 btn-link-1-google-plus" href="#">
-                    		<i class="fa fa-google-plus"></i> Google Plus
-                    	</a>
-                	</div>
-                </div>
-            </div> -->
         </div>
     </div>
     
