--- a/ui/partials/simulate.html
+++ b/ui/partials/simulate.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div>
     <div class="col-sm-12">      
       <ui-gmap-google-map center='map.center' zoom='map.zoom' events='map.events'>
 
