remove footer from sign-up page

--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -543,6 +543,10 @@ input.search-form:hover {
   margin-bottom: 50px;
 }
 
+#feature .container{
+  padding-top: 50px;
+}
+
 .features{
   padding: 0;
 }
