--- a/ui/partials/registration.html
+++ b/ui/partials/registration.html
@@ -15,7 +15,10 @@
                     </div>            
                     <div class="col-sm-12 form-group" id="srcDiv">
                         <div><input autocomplete="off" aria-haspopup="false" role="combobox" aria-autocomplete="both" class="doodly-input"  placeholder="Choose pickup point" ng-model="userSelection.src"></div>
-                        <span class="doodly-input-line"></span>                        
+                        <span class="doodly-input-line"></span>                                               
+                    </div>
+                    <div ng-show="hasErrors" class="col-sm-12">
+                        <span style="color:red">Please hit enter in pickup point and submit</span>
                     </div>
                     <div class="col-sm-12 form-group" id="searchbox">                        
                         <ui-gmap-google-map center="newMap.center" zoom="newMap.zoom">                                
