--- a/ui/partials/searchTemplate.html
+++ b/ui/partials/searchTemplate.html
@@ -1,2 +1,2 @@
-<div><input autocomplete="off" role="combobox" aria-haspopup="false" role="combobox" aria-autocomplete="both" class="doodly-input" id="searchTextField" placeholder="Type pickup point and hit enter" ng-model="userSelection.src" ng-keyup="keyPress($event)"></div>
+<div><input id="searchTextField" autocomplete="off" role="combobox" aria-haspopup="false" role="combobox" aria-autocomplete="both" class="doodly-input"  placeholder="Type pickup point and hit enter" ng-model="userSelection.src" ng-keyup="keyPress($event)"></div>
 <span class="doodly-input-line"></span>
