UI Layout Adjustments

--- a/ui/partials/homepage.html
+++ b/ui/partials/homepage.html
@@ -30,7 +30,7 @@
             <div class="features">
                 <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="feature-wrap">
-                        <i class="fa fa-bullhorn"></i>
+                        <i class="fa fa-comments"></i>
                         <h2></h2>
                         <h3>Hub and Spoke model to optimise</h3>
                     </div>
@@ -40,7 +40,15 @@
                     <div class="feature-wrap">
                         <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Inspired by Six Sigma compliant  Dabbawala delivery </h3>
+                        <h3>Small local businesses are our partners for delivery</h3>
+                    </div>
+                </div><!--/.col-md-4-->
+
+                <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                    <div class="feature-wrap">
+                        <i class="fa fa-comments"></i>
+                        <h2></h2>
+                        <h3>Inspired by Six Sigma compliant <a href="https://en.wikipedia.org/wiki/Dabbawala" > Dabbawala </a>delivery </h3>
                     </div>
                 </div><!--/.col-md-4-->
 
@@ -62,15 +70,15 @@
 
                 <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="feature-wrap">
-                        <i class="fa fa-cloud-download"></i>
+                        <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Maximise your fleet utilisation </h3>
+                        <h3>Maximise fleet utilisation </h3>
                     </div>
                 </div><!--/.col-md-4-->
             
                 <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="feature-wrap">
-                        <i class="fa fa-leaf"></i>
+                        <i class="fa fa-comments"></i>
                         <h2></h2>
                         <h3>GPS tracking for real-time view</h3>
                     </div>
@@ -78,17 +86,17 @@
 
                 <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="feature-wrap">
-                        <i class="fa fa-cogs"></i>
+                        <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Million kilometre reduction in delivery miles</h3>
+                        <h3>Million kilometers of reduction in delivery miles</h3>
                     </div>
                 </div><!--/.col-md-4-->
 
                 <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="feature-wrap">
-                        <i class="fa fa-heart"></i>
+                        <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Gallons fuel savings</h3>
+                        <h3>Gallons of fuel savings</h3>
                     </div>
                 </div><!--/.col-md-4-->
             </div><!--/.services-->
