landing page modification

--- a/ui/partials/homepage.html
+++ b/ui/partials/homepage.html
@@ -56,7 +56,7 @@
                     <div class="feature-wrap">
                         <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Anyone registered can deliver, not only businesses</h3>
+                        <h3>Everyone can deliver, not only businesses</h3>
                     </div>
                 </div>
                 
