user and doodly sign up on same page with different template

--- a/ui/partials/about-us.html
+++ b/ui/partials/about-us.html
@@ -5,47 +5,47 @@
 			<img src="images/bg1.jpg" class="img-responsive">
 		</div>
 
-        <div class="row height-500">
+        <div class="row contact-team-height">
         	<h2>Contact Doodly Team</h2>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="gmap">
                     <iframe src="http://maps.google.com/maps?q=Brigade+Road+Bangalore&loc:12.971254+77.606991&z=15&output=embed"></iframe> 
                 </div>
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-3">
             	<address>
                     <h4>Smijith</h4>
-                    <p>Phone: +91 9741496753<br>
-                    Email ID: <a href="">smijithkp@gmail.com</a></p>
+                    <p>+91 9741496753<br>
+                    <a href="">smijithkp@gmail.com</a></p>
                 </address>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
             	<address>
                     <h4>Jany</h4>
-                    <p>Phone: +91 9916941341<br>
-                    Email ID: <a href="">jany.jose@gmail.com</a></p>
+                    <p>+91 9916941341<br>
+                    <a href="">jany.jose@gmail.com</a></p>
                 </address>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
             	<address>
                     <h4>Goutham</h4>
-                    <p>Phone: +91 9008600881<br>
-                    Email ID: <a href="">gouthamcumar@gmail.com</a></p>
+                    <p>+91 9008600881<br>
+                    <a href="">gouthamcumar@gmail.com</a></p>
                 </address>
             </div>
-            <div class="col-sm-4">
-            	<address>
-                    <h4>Lalmohan</h4>
-                    <p>Phone: +91 9739049220<br>
-                    Email ID: <a href="">lalmohan.mohanadoss@gmail.com</a></p>
-                </address>
-            </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
             	<address>
                     <h4>Pragyesh</h4>
-                    <p>Phone: +918884509888<br>
-                    Email ID: <a href="">pragyesh15@gmail.com</a></p>
+                    <p>+91 8884509888<br>
+                    <a href="">pragyesh15@gmail.com</a></p>
+                </address>
+            </div>
+            <div class="col-sm-3">
+            	<address>
+                    <h4>Lalmohan</h4>
+                    <p>+91 9739049220<br>
+                    <a href="">lalmohan.mohanadoss@gmail.com</a></p>
                 </address>
             </div>
         </div>	
