--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -552,8 +552,8 @@ input.search-form:hover {
 }
 
 .feature-wrap {
-  margin-bottom: 35px;
-  overflow: hidden;
+  /*margin-bottom: 35px;
+  overflow: hidden;*/
 }
 
 .feature-wrap h2{
@@ -1913,13 +1913,13 @@ ul.social_icons li  a i{
 
 .gmap{
     border: 10px solid #f6f5f0;
-    border-radius: 50%;
-    height: 300px;
+    /*border-radius: 50%;*/
+    height: 175px;
     width: 300px;
     box-shadow: 0px 0px 3px 3px #e7e4dc;
     overflow: hidden;
     position: relative;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
 }
 
 .gmap-area .map-content ul {
