redirect to send package after login.. image in about-us..

--- a/ui/partials/about-us.html
+++ b/ui/partials/about-us.html
@@ -1,12 +1,12 @@
 <section id="about-us">
     <div class="container">
-		<div class="row">
-			<h2>About Doodly Team</h2>
-			<img src="images/bg1.jpg" class="img-responsive">
+		<div class="row" style="padding-left: 15px;">
+			<h2>Team in action during #hackathon</h2>
+			<img src="images/team.png" class="img-responsive">
 		</div>
 
         <div class="row contact-team-height">
-        	<h2>Contact Doodly Team</h2>
+        	</br>
             <div class="col-sm-3">
                 <div class="gmap">
                     <iframe src="http://maps.google.com/maps?q=Brigade+Road+Bangalore&loc:12.971254+77.606991&z=15&output=embed"></iframe> 
