click action for send package page

--- a/ui/partials/homepage.html
+++ b/ui/partials/homepage.html
@@ -32,7 +32,7 @@
                     <div class="feature-wrap">
                         <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Hub and Spoke model to optimise</h3>
+                        <h3></br>Hub and Spoke model to optimise</h3>
                     </div>
                 </div><!--/.col-md-4-->
 
@@ -56,7 +56,7 @@
                     <div class="feature-wrap">
                         <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Everyone can deliver, not only businesses</h3>
+                        <h3></br>Everyone can deliver, not only businesses</h3>
                     </div>
                 </div>
                 
@@ -72,7 +72,7 @@
                     <div class="feature-wrap">
                         <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Maximise fleet utilisation </h3>
+                        <h3></br>Maximise fleet utilisation </h3>
                     </div>
                 </div><!--/.col-md-4-->
             
@@ -80,7 +80,7 @@
                     <div class="feature-wrap">
                         <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>GPS tracking for real-time view</h3>
+                        <h3></br>GPS tracking for real-time view</h3>
                     </div>
                 </div><!--/.col-md-4-->
 
@@ -96,7 +96,7 @@
                     <div class="feature-wrap">
                         <i class="fa fa-comments"></i>
                         <h2></h2>
-                        <h3>Gallons of fuel savings</h3>
+                        <h3></br>Gallons of fuel savings</h3>
                     </div>
                 </div><!--/.col-md-4-->
             </div><!--/.services-->
