--- a/ui/partials/sendPackage.html
+++ b/ui/partials/sendPackage.html
@@ -53,10 +53,10 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="col-sm-2">                        
-                        <input type="submit" name="submit" id="submit" value="Submit" ng-click="applySelectedInputs()" class="col-sm-12 btn btn-info">
+                        <input name="submit" id="submit" value="Submit" ng-click="sendPackageRedirect()" class="col-sm-12 btn btn-info">
                     </div>
                     <div class="col-sm-2">
-                        <input type="submit" name="submit" id="submit" value="Cancel" ng-click="closeSelector()" class="col-sm-12 btn btn-info">                                    
+                        <input name="submit" id="submit" value="Cancel" ng-click="sendPackageRedirect()" class="col-sm-12 btn btn-info">                                    
                     </div>
                 </div>
             </div>
