--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -540,7 +540,7 @@ input.search-form:hover {
 #feature {
   background: #f2f2f2;
   padding-bottom: 50px;
-  margin-bottom: 50px;
+ /* margin-bottom: 50px;*/
 }
 
 #feature .container{
