--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -138,6 +138,7 @@ img { max-width: 100%; }
 	background: #eee;
 	-moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
 	text-align: left;
+	margin-bottom: 20px;
 }
 
 .form-bottom form textarea {
